--- a/README
+++ b/README
@@ -7,7 +7,7 @@ lines are identical it outputs "yes"; otherwise it outputs "no".
 
  Example Usage
 
-$ sha1sum README Makefile main.cc |cut -d' ' -f1 |iseq 
+$ sha1sum README main.cc |cut -d' ' -f1 |iseq 
 no
 $ sha1sum README README |cut -d' ' -f1 |iseq 
 yes
